

[metadata]

name = mapbind
version = 1.1.0
description = Assignment-aware binding functions

author = Christopher O'Brien
author_email = obriencj@gmail.com

copyright_years = 2017-2024

license = GNU Lesser General Public License v.3
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/python-mapbind

platform = any

project_urls =
  Source = https://github.com/obriencj/python-mapbind
  Bug Reports = https://github.com/obriencj/python-mapbind/issues

classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development


[options]

python_requires = >=2.6, !=3.0.*, !=3.1.*, !=3.2.*, <4

packages =
  mapbind

zip_safe = False


[bdist_wheel]

universal = 1


[aliases]

test = nosetests


[tox:tox]

envlist = flake8,bandit,twine,py{37,38,39,310,311}

skip_missing_interpreters = true


[testenv]

commands =
  python -B -m nose


sitepackages = false

deps =
  nose-py3


[testenv:py27]

deps =
  nose


[testenv:bandit-sarif]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg \
    -f sarif -o bandit.sarif \
    -qr mapbind
  python -B -m sarif summary bandit.sarif

deps =
  bandit
  bandit-sarif-formatter
  sarif-tools


[testenv:flake8]

basepython = python3.9

commands =
  python -B -m flake8 mapbind

deps =
  flake8

skip_install = True


[testenv:twine]

basepython = python3.9

commands =
  python -B -m build -n .
  python -B -m twine check dist/*.whl

deps =
  build
  twine

skip_install = True


[testenv:sphinx]

basepython = python3.9

# somewhere, some idiot is proud of the removal of the build_sphinx
# setuptools integration.
commands =
  python -B -m sphinx.cmd.build -b dirhtml \
    docs build/sphinx/dirhtml

  python -B -m sphinx.cmd.build -b html \
    docs build/sphinx/html

deps =
  sphinx


[testenv:build]

basepython = python3.9

commands =
  python -B -m build -n .

deps =
  build


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


[bandit]

# B101 complains about asserts
skips = B101


[flake8]

# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator
ignore = E303,E731,E741,F401,F812,W504

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


[mypy]

no_site_packages = False
ignore_missing_imports = True
strict_optional = False
mypy_path = stubs/


[gh-actions]

python =
  3.7: py37
  3.8: py38
  3.9: py39
  3.10: py310
  3.11: py311


# The end.
